--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 models/* filter=lfs diff=lfs merge=lfs -text
 models/** filter=lfs diff=lfs merge=lfs -text
 data/** filter=lfs diff=lfs merge=lfs -text
+model/** filter=lfs diff=lfs merge=lfs -text
